<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="image_preview">Image Preview</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="crop_error">Crop Error</string>
    <string name="image">Image</string>
    <string name="title_news">Title</string>
    <string name="description_news">Description</string>
    <string name="time">Time</string>
</resources>