<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!-- Progress Indicator -->
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Preview ImageView -->
    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder"
        android:contentDescription="@string/image"/>

    <!-- Left FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ungu"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/news"
        android:src="@drawable/baseline_newspaper_24"
        app:layout_constraintBottom_toBottomOf="@+id/galleryButton"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintTop_toTopOf="@+id/galleryButton" />

    <!-- Left Button Label -->
    <TextView
        android:id="@+id/newsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/newsButton"
        app:layout_constraintStart_toStartOf="@+id/newsButton"
        app:layout_constraintEnd_toEndOf="@+id/newsButton" />

    <!-- Gallery Button (Center) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/gallery"
        android:backgroundTint="@color/ungu"
        android:tint="@color/white"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Gallery Label -->
    <TextView
        android:id="@+id/galleryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton"
        app:layout_constraintStart_toStartOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="@+id/galleryButton" />

    <!-- Right FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/history"
        android:backgroundTint="@color/ungu"
        android:src="@drawable/baseline_history_24"
        app:layout_constraintBottom_toBottomOf="@+id/galleryButton"
        app:layout_constraintStart_toEndOf="@+id/galleryButton"
        app:layout_constraintTop_toTopOf="@+id/galleryButton" />

    <!-- Right Button Label -->
    <TextView
        android:id="@+id/historyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/historyButton"
        app:layout_constraintStart_toStartOf="@+id/historyButton"
        app:layout_constraintEnd_toEndOf="@+id/historyButton" />

    <!-- Analyze Button -->
    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/analyze"
        android:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>